--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="panel">
                 <ol>
                     <li>command</li>
-                    <li></li>
-                    <li></li>
+                    <li>status</li>
+                    <li>log</li>
                     <li></li>
                     <li></li>
                     <li></li>
